--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
     "trailingComma": "es5",
     "tabWidth": 4,
-    "tabs": false,
+    "tabs": true,
     "singleQuote": true,
     "semi": true
 }
