--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,12 @@
     "[typescriptreact]": {
         "editor.defaultFormatter": "vscode.typescript-language-features"
     },
+    "[javascript]": {
+        "editor.defaultFormatter": "vscode.typescript-language-features"
+    },
+    "[javascriptreact]": {
+        "editor.defaultFormatter": "vscode.typescript-language-features"
+    },
     "[yaml]": {
         "editor.insertSpaces": false,
         "editor.tabSize": 4,
