--- a/Demos/nextjs-demo/package.json
+++ b/Demos/nextjs-demo/package.json
@@ -12,10 +12,12 @@
     "next": "11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-intl": "^5.20.2",
     "sass": "^1.35.1"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
+    "@types/react-intl": "^3.0.0",
     "eslint": "7.28.0",
     "eslint-config-next": "11.0.0",
     "typescript": "4.3.2"
