--- a/Demos/mars3d-demo/.vscode/settings.json
+++ b/Demos/mars3d-demo/.vscode/settings.json
@@ -1,4 +1,13 @@
 {
+  "[vue]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  },
+  "[typescript]": {
+      "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  },
+  "[javascript]": {
+      "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  },
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   }
