--- a/Demos/mars3d-demo/package.json
+++ b/Demos/mars3d-demo/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.23.0",
     "element-plus": "^1.1.0-beta.20",
+    "mars3d": "^3.1.8",
     "vue": "^3.2.16",
     "vue-router": "^4.0.11",
     "vuex": "^4.0.2"
@@ -42,6 +43,7 @@
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
     "vite-plugin-element-plus": "^0.0.12",
+    "vite-plugin-mars3d": "^1.0.0",
     "vue-tsc": "^0.3.0"
   }
 }
