--- a/Demos/cesium-demo/package.json
+++ b/Demos/cesium-demo/package.json
@@ -3,8 +3,11 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "antd": "^4.16.13",
+        "cesium": "1.84.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "resium": "^1.14.3",
         "typescript": "^4.1.2",
         "web-vitals": "^1.0.1"
     },
@@ -50,6 +53,7 @@
         "@typescript-eslint/eslint-plugin": "^4.6.0",
         "@typescript-eslint/parser": "^4.6.0",
         "antd-dayjs-webpack-plugin": "^1.0.6",
+        "babel-loader": "^8.2.3",
         "copy-webpack-plugin": "^5.1.1",
         "css-loader": "^3.5.2",
         "dotenv-webpack": "^7.0.3",
@@ -64,6 +68,7 @@
         "eslint-plugin-react-hooks": "^4.2.0",
         "file-loader": "^6.0.0",
         "html-webpack-plugin": "^4.2.0",
+        "html-webpack-tags-plugin": "^3.0.2",
         "husky": "^4.2.5",
         "interpolate-html-plugin": "^4.0.0",
         "mini-css-extract-plugin": "^0.9.0",
