--- a/Demos/cesium-demo/package.json
+++ b/Demos/cesium-demo/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "antd": "^4.16.13",
         "cesium": "1.84.0",
+        "cesium-navigation": "^1.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "resium": "^1.14.3",
