--- a/Demos/marzipano-demo/package.json
+++ b/Demos/marzipano-demo/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "marzipano": "^0.10.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "typescript": "^4.1.2",
