--- a/Demos/module-federation-demo/app1/package.json
+++ b/Demos/module-federation-demo/app1/package.json
@@ -16,7 +16,8 @@
     "typescript": "^4.3.5",
     "webpack": "5.40.0",
     "webpack-cli": "4.7.2",
-    "webpack-dev-server": "3.11.2"
+    "webpack-dev-server": "3.11.2",
+    "webpack-remote-types-plugin": "^0.2.7"
   },
   "scripts": {
     "start": "webpack-cli serve",
