--- a/Demos/module-federation-demo/app2/package.json
+++ b/Demos/module-federation-demo/app2/package.json
@@ -9,8 +9,10 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "babel-loader": "8.2.2",
+    "dts-loader": "^0.1.6",
     "html-webpack-plugin": "5.3.1",
     "serve": "11.3.2",
+    "tar-webpack-plugin": "^0.1.0",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
     "webpack": "5.40.0",
