--- a/Demos/mars3d-demo/package.json
+++ b/Demos/mars3d-demo/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "vite-vue3-app",
+  "name": "mars3d-demo",
   "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
