--- a/Demos/marzipano-demo/package.json
+++ b/Demos/marzipano-demo/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "react-template",
+    "name": "marzipano-demo",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
