--- a/Demos/module-federation-demo/app1/package.json
+++ b/Demos/module-federation-demo/app1/package.json
@@ -11,6 +11,7 @@
     "babel-loader": "8.2.2",
     "bundle-loader": "0.5.6",
     "html-webpack-plugin": "5.3.1",
+    "html-webpack-tags-plugin": "^3.0.2",
     "serve": "11.3.2",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
