--- a/Demos/module-federation-demo/app1/tsconfig.json
+++ b/Demos/module-federation-demo/app1/tsconfig.json
@@ -1,18 +1,18 @@
 {
-    "exclude": ["node_modules"],
-    "compilerOptions": {
-      "baseUrl": ".",
-      "module": "es2020",
-      "moduleResolution": "node",
-      "target": "es6",
-      "jsx": "react",
-      "strict": true,
-      "sourceMap": true,
-      "allowJs": true,
-      "allowSyntheticDefaultImports": true,
-      "paths": {
-        "app2/*": ["./src/types/app2/*"] // Wherever you want to put
-      }
-    },
-    "include": ["src"]
+  "exclude": ["node_modules"],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "module": "es2020",
+    "moduleResolution": "node",
+    "target": "es6",
+    "jsx": "react",
+    "strict": true,
+    "sourceMap": true,
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "paths": {
+      "*": ["*", "./src/types/*"]
+    }
+  },
+  "include": ["src"]
 }
