--- a/Demos/module-federation-demo/app2/package.json
+++ b/Demos/module-federation-demo/app2/package.json
@@ -9,12 +9,19 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "babel-loader": "8.2.2",
-    "dts-loader": "^0.1.6",
+    "css-loader": "^6.5.1",
+    "dts-loader": "0.1.6",
     "html-webpack-plugin": "5.3.1",
+    "mini-css-extract-plugin": "^2.4.5",
+    "node-sass": "^7.0.0",
+    "sass-loader": "^12.4.0",
     "serve": "11.3.2",
-    "tar-webpack-plugin": "^0.1.0",
+    "style-loader": "^3.3.1",
+    "tar": "^6.1.0",
+    "tar-webpack-plugin": "^0.1.1",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
+    "typescript-plugin-css-modules": "^3.4.0",
     "webpack": "5.40.0",
     "webpack-cli": "4.7.2",
     "webpack-dev-server": "3.11.2"
