--- a/Demos/react-hook-demo/package.json
+++ b/Demos/react-hook-demo/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
     "reselect": "^4.1.5",
+    "sass": "^1.52.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
