--- a/Demos/react-hook-demo/package.json
+++ b/Demos/react-hook-demo/package.json
@@ -104,7 +104,8 @@
     ]
   },
   "devDependencies": {
-    "@types/antd": "^1.0.0"
+    "@types/antd": "^1.0.0",
+    "webpack-bundle-analyzer": "^4.5.0"
   },
   "jest": {
     "roots": [
