--- a/Demos/react-hook-demo/package.json
+++ b/Demos/react-hook-demo/package.json
@@ -105,6 +105,7 @@
   },
   "devDependencies": {
     "@types/antd": "^1.0.0",
+    "babel-plugin-import": "^1.13.5",
     "webpack-bundle-analyzer": "^4.5.0"
   },
   "jest": {
