--- a/Demos/react-hook-demo/package.json
+++ b/Demos/react-hook-demo/package.json
@@ -60,6 +60,7 @@
     "proxy-memoize": "^0.3.7",
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
+    "react-beautiful-dnd": "6.0.2",
     "react-dev-utils": "^11.0.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
