--- a/Demos/react-hook-demo/package.json
+++ b/Demos/react-hook-demo/package.json
@@ -78,7 +78,7 @@
     "typescript": "^4.1.2",
     "url-loader": "4.1.1",
     "web-vitals": "^1.0.1",
-    "webpack": "4.44.2",
+    "webpack": "^4.46.0",
     "webpack-dev-server": "3.11.1",
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "5.1.4"
@@ -109,6 +109,7 @@
   "devDependencies": {
     "@types/antd": "^1.0.0",
     "babel-plugin-import": "^1.13.5",
+    "block-analysis-webpack-plugin": "^1.0.5",
     "webpack-bundle-analyzer": "^4.5.0"
   },
   "jest": {
