--- a/Demos/ones-demo/package.json
+++ b/Demos/ones-demo/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.12.3",
+    "@ones-design/core": "2.10.3",
+    "@ones-design/icons": "2.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@reduxjs/toolkit": "^1.7.1",
     "@svgr/webpack": "5.5.0",
