--- a/Demos/react-hook-demo/package.json
+++ b/Demos/react-hook-demo/package.json
@@ -27,6 +27,7 @@
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "compression-webpack-plugin": "6.1.1",
     "css-loader": "4.3.0",
+    "dayjs": "^1.11.3",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "enumify": "^2.0.0",
@@ -50,6 +51,7 @@
     "jest-watch-typeahead": "0.6.1",
     "jquery": "^3.6.0",
     "mini-css-extract-plugin": "0.11.3",
+    "moment": "^2.29.4",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
