--- a/Demos/ones-demo/package.json
+++ b/Demos/ones-demo/package.json
@@ -8,6 +8,9 @@
     "@ones-design/icons": "2.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@reduxjs/toolkit": "^1.7.1",
+    "@sentry/integrations": "7.30.0",
+    "@sentry/react": "7.29.0",
+    "@sentry/tracing": "7.29.0",
     "@svgr/webpack": "5.5.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -65,6 +68,8 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-refresh": "^0.8.3",
+    "react-router": "5.2.1",
+    "react-router-dom": "5.3.0",
     "reselect": "^4.1.5",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
