--- a/Demos/ones-demo/package.json
+++ b/Demos/ones-demo/package.json
@@ -8,9 +8,9 @@
     "@ones-design/icons": "2.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@reduxjs/toolkit": "^1.7.1",
-    "@sentry/integrations": "7.30.0",
-    "@sentry/react": "7.29.0",
-    "@sentry/tracing": "7.29.0",
+    "@sentry/integrations": "7.42.0",
+    "@sentry/react": "7.42.0",
+    "@sentry/tracing": "7.42.0",
     "@svgr/webpack": "5.5.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -80,6 +80,7 @@
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
     "typescript": "^4.1.2",
+    "url-join": "5.0.0",
     "url-loader": "4.1.1",
     "web-vitals": "^1.0.1",
     "webpack": "^4.46.0",
@@ -90,7 +91,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "sentry_test": "node scripts/sentry"
   },
   "eslintConfig": {
     "extends": [
